tests/baselines/reference/es6ImportNamedImportParsingError.errors.txt
es6ImportNamedImportParsingError_1.ts(1,10): error TS1003: Identifier expected.
es6ImportNamedImportParsingError_1.ts(1,10): error TS1141: String literal expected.
es6ImportNamedImportParsingError_1.ts(1,12): error TS1109: Expression expected.
es6ImportNamedImportParsingError_1.ts(1,14): error TS1434: Unexpected keyword or identifier.
es6ImportNamedImportParsingError_1.ts(1,14): error TS2304: Cannot find name 'from'.
es6ImportNamedImportParsingError_1.ts(2,8): error TS1192: Module '"es6ImportNamedImportParsingError_0"' has no default export.
es6ImportNamedImportParsingError_1.ts(2,24): error TS1005: '{' expected.
es6ImportNamedImportParsingError_1.ts(3,1): error TS1128: Declaration or statement expected.
es6ImportNamedImportParsingError_1.ts(3,8): error TS1128: Declaration or statement expected.
es6ImportNamedImportParsingError_1.ts(3,16): error TS1434: Unexpected keyword or identifier.
es6ImportNamedImportParsingError_1.ts(3,16): error TS2304: Cannot find name 'from'.
es6ImportNamedImportParsingError_1.ts(4,13): error TS1005: 'from' expected.
es6ImportNamedImportParsingError_1.ts(4,13): error TS1141: String literal expected.
es6ImportNamedImportParsingError_1.ts(4,20): error TS1005: ';' expected.


==== es6ImportNamedImportParsingError_0.ts (0 errors) ====
    export var a = 10;
    export var x = a;
    export var m = a;
    
==== es6ImportNamedImportParsingError_1.ts (14 errors) ====
    import { * } from "es6ImportNamedImportParsingError_0";
             ~
!!! error TS1003: Identifier expected.
             ~
!!! error TS1141: String literal expected.
               ~
!!! error TS1109: Expression expected.
                 ~~~~
!!! error TS1434: Unexpected keyword or identifier.
                 ~~~~
!!! error TS2304: Cannot find name 'from'.
    import defaultBinding, from "es6ImportNamedImportParsingError_0";
           ~~~~~~~~~~~~~~
!!! error TS1192: Module '"es6ImportNamedImportParsingError_0"' has no default export.
                           ~~~~
!!! error TS1005: '{' expected.
    import , { a } from "es6ImportNamedImportParsingError_0";
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
           ~
!!! error TS1128: Declaration or statement expected.
                   ~~~~
!!! error TS1434: Unexpected keyword or identifier.
                   ~~~~
!!! error TS2304: Cannot find name 'from'.
    import { a }, from "es6ImportNamedImportParsingError_0";
                ~
!!! error TS1005: 'from' expected.
                ~~~~~~
!!! error TS1141: String literal expected.
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1005: ';' expected.